--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
 /* hi */
+
+:root {
+  --light-black: #2e2c2caf;
+  --bggradient: linear-gradient(to bottom,
+      #93c47d, #fdf6e3);
+
+  --light-gray: rbga(255, 255, 255, 0)
+}
+
+* {
+  box-sizing: border-box;
+}
+
+main {
+  background: #93c47d;
+  background: var(--bggradient);
+}
+
+.section-1 {
+  padding: 0 0 5rem 0;
+}
+
+.section-1 .container .row .col-md-12 .logo img {
+  width: 30%;
+  margin: 0 35%;
+}
+
+.section-1 h3 {
+  text-align: center;
+  margin: 0 0 2rem;
+}
+
+.section-1 .container .row .col-md-12 .video video {
+  width: 100%;
+  box-shadow: 0px 5px 42px rgba(0, 0, 0, 0.6);
+}
