--- a/style.css
+++ b/style.css
@@ -31,7 +31,28 @@ main {
   margin: 0 0 2rem;
 }
 
-.section-1 .container .row .col-md-12 .video video {
+.section-1 .row .col-md-12 .video video {
   width: 100%;
   box-shadow: 0px 5px 42px rgba(0, 0, 0, 0.6);
+  padding: 0;
+}
+
+.section-2.bg-image {
+  background-image: url(assets/image18.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.overlay {
+  background: rgba(255, 255, 255, 0.8);
+  padding: 10vmin;
+
+}
+
+.section-3.bg-image {
+  background-image: url(assets/image22.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
