--- a/style.css
+++ b/style.css
@@ -67,3 +67,27 @@ li {
   background-size: cover;
   background-position: center;
 }
+
+
+.wrapper {
+  column-count: 2;
+  column-gap: 50px;
+  padding: 50px;
+}
+
+p {
+  line-height: 1.6;
+  font-family: Helvetica;
+  text-align: justify;
+  margin: 0;
+  font-size: 14px;
+}
+
+.img-wrapped {
+  float: left;
+  width: 200px;
+  shape-outside: url(assets/image7.jpg);
+  shape-margin: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
