--- a/style.css
+++ b/style.css
@@ -85,9 +85,20 @@ p {
 
 .img-wrapped {
   float: left;
-  width: 200px;
+  width: 150px;
   shape-outside: url(assets/image7.jpg);
   shape-margin: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 550px) {
+  .img-wrapped {
+    float: left;
+    width: 200px;
+    shape-outside: url(assets/image7.jpg);
+    shape-margin: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
 }
